# hashbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_integration.py
.github/workflows/: ci.yml
hashbot/: __init__.py  config.py
hashbot/a2a/: __init__.py  executor.py  messages.py  protocol.py
hashbot/agents/: __init__.py  base.py  registry.py
hashbot/agents/examples/: __init__.py  code_reviewer.py  crypto_analyst.py  translator.py
hashbot/bot/: __init__.py  handlers.py  keyboards.py
hashbot/db/: __init__.py  crud.py  engine.py  models.py
hashbot/hashkey/: __init__.py  chain.py  tokens.py  wallet.py
hashbot/openclaw/: __init__.py  client.py  manager.py  skills.py
hashbot/services/: __init__.py  payment_service.py  wallet_service.py
hashbot/x402/: __init__.py  executor.py  payment.py  verification.py
server/: __init__.py  main.py
server/routes/: a2a.py  agents_api.py  dashboard.py  health.py  webhook.py
server/static/css/: custom.css
server/static/js/: chat.js
server/templates/: agent_chat.html  agent_detail.html  agent_skills.html  agents.html  base.html  dashboard.html  explore.html  my_agents.html  settings.html
tests/: __init__.py  test_a2a.py  test_agents.py  test_crud.py
